@@ -6,6 +6,7 @@
 	* Removed header variable from mod1/class.tx_powermail_export.php as header()-function hasn't any return value
 	* Fixed Bug #31011: Field validation doesnt work correctly (Thanks to Arek)
 	* Fixed Bug #31029: Absolute path to icon_info.gif (Thanks to Markus Klein)
+	* Added Feature #31340: no html possible in label of checkbox (Thanks to Martin Holtz)
 
 2012-06-21  Nicole Cordes <cordes@cps-it.de>
 
